--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
   "workspaces": [
     "frontend",
     "backend"
-  ]
+  ],
+  "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
+    "postcss": "^8.5.6",
+    "react-chartjs-2": "^5.3.0",
+    "tailwindcss": "^4.1.12"
+  }
 }
