--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.2.0",
     "@types/recharts": "^1.8.29",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2"
   },
